cmake_minimum_required(VERSION 3.27)
project(PS)

set(CMAKE_CXX_STANDARD 17)

add_executable(PS ex01.cpp
        ex02.cpp
        ex03.cpp
)

add_executable(ex02 ex02.cpp)
add_executable(ex03 ex03.cpp)
add_executable(ex04 ex04.cpp)
add_executable(ex05 ex05.cpp)
add_executable(ex06 ex06.cpp)
add_executable(ex07 ex07.cpp)
add_executable(mypc_2018_1 mypc_2018_1.cpp)
add_executable(ex08 ex08.cpp)
add_executable(nypc_2018_2 nypc_2018_2.cpp)
add_executable(ex09 ex09.cpp)
add_executable(ex10 ex10.cpp)