cmake_minimum_required(VERSION 3.27)
project(PS)

set(CMAKE_CXX_STANDARD 17)

add_executable(PS ex01.cpp
        ex02.cpp
        ex03.cpp
)

add_executable(ex02 ex02.cpp)
add_executable(ex03 ex03.cpp)
add_executable(ex04 ex04.cpp)
add_executable(ex05 ex05.cpp)
add_executable(ex06 ex06.cpp)
add_executable(ex07 ex07.cpp)
add_executable(mypc_2018_1 mypc_2018_1.cpp)
add_executable(ex08 ex08.cpp)
add_executable(nypc_2018_2 nypc_2018_2.cpp)
add_executable(ex09 ex09.cpp)
add_executable(ex10 ex10.cpp)
add_executable(ex11 ex11.cpp)
add_executable(ex12 ex12.cpp)
add_executable(ex13 ex13.cpp)
add_executable(ex14 ex14.cpp)
add_executable(ex15 ex15.cpp)
add_executable(ex16 ex16.cpp)
add_executable(ex17 ex17.cpp)
add_executable(ex18 ex18.cpp)
add_executable(ex20 ex20.cpp)
add_executable(ex21 ex21.cpp)
add_executable(ex22 ex22.cpp)
add_executable(ex23 ex23.cpp)
add_executable(ex24 ex24.cpp)
add_executable(ex26 ex26.cpp)
add_executable(ex25 ex25.cpp)
add_executable(Baekjoon_2018 Baekjoon_2018.cpp)
add_executable(Baekjoon_1940 Baekjoon_1940.cpp)
add_executable(Baekjoon_1253 Baekjoon_1253.cpp)
add_executable(Baekjoon_12891 Baekjoon_12891.cpp)
add_executable(Baekjoon_11659 Baekjoon_11659.cpp)
add_executable(Baekjoon_1874 Baekjoon_1874.cpp)
add_executable(Baekjoon_2164 Baekjoon_2164.cpp)
add_executable(Baekjoon_11286 Baekjoon_11286.cpp)
add_executable(Prac_exam Prac_exam.cpp)